--- a/PoJunUI/OutPutWindow.ui
+++ b/PoJunUI/OutPutWindow.ui
@@ -24,6 +24,9 @@
      </rect>
     </property>
     <layout class="QVBoxLayout" name="vlayout">
+     <property name="bottomMargin">
+      <number>6</number>
+     </property>
      <item>
       <widget class="QTextEdit" name="show_text">
        <property name="readOnly">
@@ -33,6 +36,12 @@
      </item>
      <item>
       <layout class="QHBoxLayout" name="hlayout">
+       <property name="leftMargin">
+        <number>6</number>
+       </property>
+       <property name="rightMargin">
+        <number>6</number>
+       </property>
        <item>
         <widget class="QLabel" name="command">
          <property name="text">
