--- a/PoJunUI/PoJunUI.ui
+++ b/PoJunUI/PoJunUI.ui
@@ -45,6 +45,14 @@
     <property name="title">
      <string>视图(&amp;V)</string>
     </property>
+    <widget class="QMenu" name="menu">
+     <property name="title">
+      <string>子窗口</string>
+     </property>
+     <addaction name="out_view"/>
+    </widget>
+    <addaction name="menu"/>
+    <addaction name="separator"/>
     <addaction name="ma_module"/>
     <addaction name="ma_memory"/>
     <addaction name="ma_thread"/>
@@ -286,6 +294,11 @@
   <action name="ma_set">
    <property name="text">
     <string>设置</string>
+   </property>
+  </action>
+  <action name="out_view">
+   <property name="text">
+    <string>输出窗口</string>
    </property>
   </action>
  </widget>
