--- a/PoJunUI/PoJunUI.ui
+++ b/PoJunUI/PoJunUI.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>831</width>
     <height>600</height>
    </rect>
   </property>
@@ -27,7 +27,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>831</width>
      <height>23</height>
     </rect>
    </property>
@@ -50,6 +50,7 @@
       <string>子窗口</string>
      </property>
      <addaction name="out_view"/>
+     <addaction name="in_view"/>
     </widget>
     <addaction name="menu"/>
     <addaction name="separator"/>
@@ -299,6 +300,11 @@
   <action name="out_view">
    <property name="text">
     <string>输出窗口</string>
+   </property>
+  </action>
+  <action name="in_view">
+   <property name="text">
+    <string>命令输入窗口</string>
    </property>
   </action>
  </widget>
